# universidad

./: .gitignore  README.md  lab_sdr.py
ESP_IDF_PROJECTS/punto1_uart_adivina_numero/: CMakeLists.txt  README.md
PROYECTO_INVERSOR/: .gitignore  Library.LibPkg  README.md  shared_lib.IntLib
PROYECTO_INVERSOR/DISEÑO/: registro_cambios_diseno_inversor.md  shared_lib.LibPkg  shared_lib.PcbLib  shared_lib.SchLib
PROYECTO_INVERSOR/DOCUMENTACION/: 00_resumen_general.md  01_prueba_concepto_l298n.md  02_proyecto_real_inversor_125k.md  03_componentes_principales.md  04_checklist_integracion_validacion.md  05_firmware_spwm_stm32.md  06_referencias_utilizadas.md  MSCSM120HM16CT3AG_drivers_filtros_referencias.md  MSCSM120HM16CT3AG_ficha_tecnica.md  README.md
PROYECTO_INVERSOR/INVERSOR_SPWM_125K/: .mxproject  CMakeLists.txt  INVERSOR_SPWM_125K.ioc  README.md  STM32F030XX_FLASH.ld
PROYECTO_INVERSOR/PRUEBA0_SPWM_L298N/: .mxproject  CMakeLists.txt  CMakePresets.json  PRUEBA0_SPWM_L298N.ioc  README.md  README_ORGANIZADO.md
RPM_regulation_esp32c6_TCRT500/: INFORME_PROYECTO_RPM.md  README.md
RPM_regulation_esp32c6_TCRT500/main/: CMakeLists.txt  config.h  control.c  control.h  http_server.c  idf_component.yml  main.c  oled.c  oled.h  pid.c  pid.h  rpm.c  rpm.h
TEORÍA_DE_APRENDIZAJE_DE_MÁQUINA/: Comparacion_Modelos_Serie_Temporal_MLP_RNN_GRU_LSTM_Densa.ipynb  Regresion.ipynb
TEORÍA_DE_SEÑALES/: README.md
backend/: __init__.py  acquisition.py  audio_output.py  config.py  dsp.py  sdr_device.py
frontend/: __init__.py  interface.py
scripts/: __init__.py  run_app.py
(+91 files in other folders)
